--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ before_script:
 language: python
 python:
   - "3.6"
+  - "2.7"
+  - "3.3"
+env:
+  - DJANGO_VERSION=2.1.13
+  - DJANGO_VERSION=2.2.6
 install:
   - pip install -r requirements.txt
   - pip install codacy-coverage
